@@ -1,8 +1,25 @@
+import os
 from . import generic
 from .request import Response
 import json
 from webob.exc import HTTPFound, HTTPNotFound, HTTPForbidden
 from webob import Response as BaseResponse
+
+
+class TemplateEngineRegistry(object):
+    def __init__(self):
+        self.clear()
+
+    def clear(self):
+        self._template_engines = {}
+
+    def register_template_engine(self, extension, func):
+        self._template_engines[extension] = func
+
+    def get_template_render(self, path, original_render):
+        _, extension = os.path.splitext(path)
+        engine = self._template_engines.get(extension)
+        return engine(path, original_render, self.settings)
 
 
 class View(object):
@@ -40,9 +57,13 @@ def render_view(content, request):
     return Response(content, content_type='text/plain')
 
 
-def register_view(registry, key_dict, view, render=render_view,
+def register_view(registry, key_dict, view,
+                  render=render_view,
+                  template=None,
                   permission=None,
                   internal=False):
+    if template is not None:
+        render = registry.get_template_render(template, render)
     v = View(view, render, permission, internal)
     registry.register_function(generic.view, v, **key_dict)
 
